# kaggle-notebook-deploy

./: .gitignore  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: update-docs.yml
scripts/: gen_commands_doc.py
src/kaggle_notebook_deploy/: __init__.py  _utils.py  cli.py
src/kaggle_notebook_deploy/commands/: init.py  init_repo.py  push.py  validate.py
tests/: test_cli.py
