[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaggle-notebook-deploy"
version = "0.1.0"
description = "git pushするだけでKaggle NotebookをデプロイするCLIツール"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "yasunorim" },
]
keywords = ["kaggle", "deploy", "notebook", "github-actions", "ci-cd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "kaggle>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
kaggle-notebook-deploy = "kaggle_notebook_deploy.cli:main"

[project.urls]
Homepage = "https://github.com/yasumorishima/kaggle-notebook-deploy"
Repository = "https://github.com/yasumorishima/kaggle-notebook-deploy"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_notebook_deploy"]
